--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -734,6 +734,13 @@ Rotate Transition in foote Soical Icon
   width: 35px;
 }
 
+/* Whatsapp SVG Micro animation */
+
+.whatsapp-icon-footer {
+  margin-bottom: 8px;
+  width: 35px;
+}
+
 
 /*
 ----------------------------------------
